# automap-rev

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: MidiManager.h  SysEx.h
src/: MidiManager.cpp  main.cpp
src/core/src/: midi_client.cpp
src/interface/: window.py
